--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+requests = "^2.31.0"
 
+
+[tool.poetry.group.lint.dependencies]
+flake8 = "^7.0.0"
+mypy = "^1.10.0"
+black = "^24.4.2"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
